<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.imcool.julian.ratinglist.RatingListMainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_title"
        android:textSize="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>
<EditText
    android:layout_marginTop="10dp"
    android:id="@+id/mEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/edit_text" />
    <RatingBar
        android:layout_marginTop="10dp"
        android:id="@+id/mRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:id="@+id/mSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_text"/>
        <Button
            android:id="@+id/mListButton"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_text"/>
        <Button
            android:id="@+id/mResetButton"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:text="@string/reset_text"/>

    </LinearLayout>



</LinearLayout>
